# bookstore-scraper

./: .gitignore  AI_Development_Report.md  CLAUDE.md  README-OFFLINE.txt  install-offline.bat  install-offline.ps1  pyproject.toml  uninstall-offline.bat  uninstall-offline.ps1
configs/: settings.yaml
configs/sites/: books_com_tw.yaml
deploy/: bookstore-scraper.service  bookstore-scraper.xml  build-offline-package.ps1  deploy-linux.sh  deploy-windows.ps1  install-linux.sh  install-windows.ps1  install.bat
docs/: cloudflare-scenarios.md  hyfse-integration.md  install-guide.md  jcr-login-loop-analysis.md  log-commands.md  yuntech-debug-timeline.md
src/: cli.py  main.py  monitor.py  rate_limiter.py  service.py
src/config/: loader.py  settings.py
src/models/: schemas.py
src/parser/: html_parser.py
src/proxy/: auth_cache.py  handler.py  jcr_browser.py  server.py  tls.py
src/scraper/: base.py  browser_pool.py  browser_scraper.py  curl_scraper.py  engine.py  session_manager.py  undetected_browser.py
src/sites/: runner.py
tests/: stress_test.py
tools/: analyze_access_js.sh  monitor_cookies.sh  monitor_proxy.sh  test_cookie_accumulation.py  test_cookie_flow.py  test_cookie_rewrite.py  test_jcr_auth.py  test_jcr_simple.sh  test_nat_session.py  test_nodriver_oup.py  test_proxy_cookie.py
